--- a/index.html
+++ b/index.html
@@ -15,8 +15,10 @@
   </div>
   <h1>Equilibrium #3429</h1>
   <p>Our Equilibrium collection promotes balance and calm.</p>
-  <p>0.041 ETH</p>
-  <p>3 days left</p>
+  <div class="eth" >
+    <p class="value" >0.041 ETH</p>
+  <p class="days" >3 days left</p>
+</div>
   <hr>
   <img class="image-avatar" src="/images/image-avatar.png" alt="passport photo of Jules Wyren"> 
   <p>Creation of Jules Wyvern
