--- a/index.html
+++ b/index.html
@@ -16,16 +16,15 @@
   <h1>Equilibrium #3429</h1>
   <p>Our Equilibrium collection promotes balance and calm.</p>
   <div class="eth" >
-    <img class="eth-icon" src="/images/icon-ethereum.svg" alt="etherium icon"> 
+    <img class="eth-icon" src="/images/icon-ethereum.svg" alt="etherium icon">
     <p class="value" >0.041 ETH</p>
     <img class="days-icon" src="/images/icon-clock.svg" alt="clock">
   <p class="days" >3 days left</p>
 </div>
   <hr>
   <div class="creator">
-  <svg class="image-avatar" src="/images/image-avatar.png" alt="passport photo of Jules Wyren"></svg> 
-  <p>Creation of Jules Wyvern
-</p>
+  <img class="image-avatar" src="/images/image-avatar.png" alt="passport photo of Jules Wyren"></img> 
+  <p>Creation of<span class="author">Jules Wyvern</span></p>
 </div>  
   </div>
 </div>
