--- a/index1.html
+++ b/index1.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style2.css">
   
   <title>Frontend Mentor | NFT preview card component</title>
 </head>
@@ -24,7 +24,7 @@
   <hr>
   <div class="creator">
   <img class="image-avatar" src="/images/image-avatar.png" alt="passport photo of Jules Wyren"></img> 
-  <p>Creation of <span class="author">Jules Wyvern</span></p>
+  <p>Creation of<span class="author">Jules Wyvern</span></p>
 </div>  
   </div>
 </div>
