--- a/index.html
+++ b/index.html
@@ -10,10 +10,14 @@
 </head>
   <body>
     <div class="container">
+      <div class="wrapper">
   <div>
     <img class="img" src="/images/image-equilibrium.jpg" alt="image of an equilibrium cube">
+    <div class="image-overlay">
+      <img src="/images/icon-view.svg">
+    </div>
   </div>
-  <h1>Equilibrium #3429</h1>
+    <h1>Equilibrium #3429</h1>
   <p>Our Equilibrium collection promotes balance and calm.</p>
   <div class="eth" >
     <img class="eth-icon" src="/images/icon-ethereum.svg" alt="etherium icon">
