--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <hr>
   <div class="creator">
   <img class="image-avatar" src="/images/image-avatar.png" alt="passport photo of Jules Wyren"></img> 
-  <p>Creation of <span class="author">Jules Wyvern</span></p>
+  <p>Creation of <a href="#Jules Wyvern">Jules Wyvern</span></p>
 </div>  
   </div>
 </div>
