--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
     <div class="container">
       <div class="wrapper">
-  <div>
+  <div class="top">
     <img class="img" src="/images/image-equilibrium.jpg" alt="image of an equilibrium cube">
     <div class="image-overlay">
       <img src="/images/icon-view.svg">
