--- a/index.html
+++ b/index.html
@@ -10,12 +10,11 @@
 </head>
   <body>
     <div class="container">
-      <div class="wrapper">
-  <div class="top">
+      <div class="top">
     <img class="img" src="/images/image-equilibrium.jpg" alt="image of an equilibrium cube">
-    <div class="image-overlay">
+    <!-- <div class="image-overlay">
       <img src="/images/icon-view.svg">
-    </div>
+    </div> -->
   </div>
     <h1>Equilibrium #3429</h1>
   <p>Our Equilibrium collection promotes balance and calm.</p>
@@ -27,10 +26,9 @@
 </div>
   <hr>
   <div class="creator">
-  <img class="image-avatar" src="/images/image-avatar.png" alt="passport photo of Jules Wyren"></img> 
+  <img class="image-avatar" src="/images/image-avatar.png" alt="passport photo of Jules Wyren"> 
   <p>Creation of <a href="#Jules Wyvern">Jules Wyvern</span></p>
 </div>  
   </div>
-</div>
 </body>
 </html>
